# adeptus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_CODE_ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a1f3f9f803c_slice_00_users_and_sessions_tables.py  1eb283db46ca_slice_01_engagements_and_engagement_.py  242bbe6579ff_slice_06_add_paused_column_to_.py  30cbe97a54f8_slice_09_graph_user_undo_stack_personal_.py  787fa8ddf114_slice_10_audit_entries_and_audit_chain_.py  7fb8ac9e4b1e_slice_02_add_privacy_mode_to_engagements.py  9302c6e41ee2_slice_05_add_concurrency_slot_limit_to_.py  942a643de71f_slice_12_chat_messages_graph_context.py  9991fc77d99b_slice_04_add_preset_name_and_status_to_tool_runs.py  b7f4c2a9e150_slice_18_autonomy_grants.py  c3e8a7b21f04_slice_17_approval_requests_scope_context.py  ca422a5de29a_slice_11_chat_messages_table.py  cdfed859bb1f_slice_15_personas_table.py  daa5fbffc234_slice_16_approval_requests.py  de0c0fb1d2ce_slice_03_add_tool_runs_table.py  e7b3c1a9f204_slice_19_findings_and_finding_history.py  f00f87bef9f6_slice_07_graph_nodes_edges_history_.py
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/core/errors/: __init__.py  exceptions.py  handlers.py
backend/app/core/errors/tests/: test_handlers.py
backend/app/core/tests/: test_config.py  test_db.py
backend/app/features/: conftest.py  test_scaffold.py
backend/app/features/approvals/: __init__.py  classifier.py  config.py  models.py  repository.py  router.py  schemas.py  scope.py  service.py
backend/app/features/approvals/tests/: conftest.py  test_classifier.py  test_integration.py  test_models.py  test_repository.py  test_router.py  test_schemas.py  test_scope.py  test_service.py
backend/app/features/audit/: hashing.py  models.py  repository.py  router.py  schemas.py  service.py  verify.py
backend/app/features/audit/tests/: conftest.py  test_hashing.py  test_integration.py  test_repository.py  test_router.py  test_schemas.py  test_service.py  test_verify.py
backend/app/features/auth/: cookies.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/auth/tests/: conftest.py  test_integration.py  test_models.py  test_repository.py  test_router.py  test_schemas.py  test_service.py
backend/app/features/autonomy/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/autonomy/tests/: conftest.py  test_repository.py  test_router.py  test_schemas.py  test_service.py
backend/app/features/chat/: __init__.py  action_parser.py  anthropic_client.py  egress_scan.py  models.py  ollama_client.py  plan_parser.py  repository.py  router.py  schemas.py  service.py  subset_builder.py  tool_calling.py
backend/app/features/chat/tests/: conftest.py  test_action_parser.py  test_anthropic_client.py  test_config.py  test_egress_scan.py  test_integration.py  test_ollama_client.py  test_plan_parser.py  test_repository.py  test_router.py  test_schemas.py  test_service.py  test_subset_builder.py  test_tool_calling.py
backend/app/features/engagements/: deps.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/engagements/tests/: conftest.py  test_engagements_pause.py  test_events.py  test_integration.py  test_repository.py  test_router.py  test_schemas.py  test_service.py  test_slot_limit.py
backend/app/features/findings/: __init__.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/findings/tests/: conftest.py  test_integration.py  test_repository.py  test_router.py  test_schemas.py  test_service.py
backend/app/features/graph/: __init__.py  deps.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py  writer.py
backend/app/features/graph/tests/: conftest.py  test_router.py  (+5 more)
backend/app/features/health/: router.py
backend/app/features/mcp/: __init__.py  concurrency.py  listeners.py  models.py  registry.py  repository.py  router.py  schemas.py  service.py  subprocess_manager.py
backend/app/features/personas/: __init__.py  models.py  repository.py  router.py  schemas.py  seed.py  service.py
backend/app/tests/: conftest.py  test_main.py
mcp-servers/: pyproject.toml
mcp-servers/config/: mcp.yaml
mcp-servers/httpx/: manifest.yaml  server.py
mcp-servers/httpx/tests/: test_httpx_server.py
mcp-servers/nmap/: manifest.yaml  server.py
mcp-servers/nmap/tests/: test_nmap_server.py
mcp-servers/shell-exec/: manifest.yaml  server.py
mcp-servers/shell-exec/tests/: test_shell_exec_server.py
(+292 files in other folders)
