[project]
name = "adeptus-backend"
version = "0.1.0"
description = "Adeptus — locally-deployable AI-assisted pentest platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi>=0.111",
    "passlib[argon2]",
    "pydantic-settings>=2.0",
    "python-multipart",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "anyio[trio]",
    "httpx",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ASYNC", "ANN"]
ignore = [
    "ANN401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
strict = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["app"]
asyncio_mode = "auto"
markers = [
    "integration: mark test as requiring real external services (postgres, ollama)",
]
