[project]
name = "adeptus-backend"
version = "0.1.0"
description = "Adeptus — locally-deployable AI-assisted pentest platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "argon2-cffi",
    "asyncpg",
    "fastapi>=0.111",
    "networkx>=3.0",
    "pydantic-settings>=2.0",
    "python-multipart",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "aiosqlite",
    "anyio[trio]",
    "httpx",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic.ini"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ASYNC", "ANN"]
ignore = [
    "ANN401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
strict = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["app"]
asyncio_mode = "auto"
# Default run is unit-only; `make test-integration` passes `-m integration`, which
# overrides this marker expression to select exactly the integration suite.
addopts = "-m 'not integration'"
markers = [
    "integration: mark test as requiring real external services (postgres, ollama)",
]

[tool.coverage.run]
# SQLAlchemy 2.x async bridges sync/async via greenlets; without tracking greenlet
# context, coverage misses lines that execute after an awaited DB call (e.g. the
# happy-path returns in auth/deps.py), under-reporting code that tests do exercise.
concurrency = ["greenlet", "thread"]
# Integration test modules are deselected from the default (coverage-gated) run, so
# measuring them as "uncovered" is noise — they run under `make test-integration`.
omit = ["*/tests/test_integration.py"]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
]
